--- a/app/src/main/res/layout/dialog_import.xml
+++ b/app/src/main/res/layout/dialog_import.xml
@@ -23,7 +23,7 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="0.4"
             android:paddingRight="10dp"
-            android:text="@string/importunique"
+            android:text="@string/import_dialog_unique"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_medium"
             android:textStyle="bold" />
@@ -51,7 +51,7 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="0.4"
             android:paddingRight="10dp"
-            android:text="@string/importfirst"
+            android:text="@string/import_dialog_primary"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_medium"
             android:textStyle="bold" />
@@ -79,7 +79,7 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="0.4"
             android:paddingRight="10dp"
-            android:text="@string/importsecond"
+            android:text="@string/import_dialog_secondary"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_medium"
             android:textStyle="bold" />
