--- a/app/src/main/res/layout/dialog_save_database.xml
+++ b/app/src/main/res/layout/dialog_save_database.xml
@@ -12,7 +12,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/filename"
+        android:text="@string/export_file_name"
         android:textColor="@color/s_text"
         android:textSize="@dimen/text_size_small"
         android:textStyle="bold" />
