--- a/app/src/main/res/layout/trait_counter.xml
+++ b/app/src/main/res/layout/trait_counter.xml
@@ -46,7 +46,7 @@
                 android:background="@drawable/custom_round_button"
                 android:gravity="center|center_vertical"
                 android:minWidth="@dimen/button_default_width"
-                android:text="@string/minusday"
+                android:text="@string/trait_layout_date_minusday"
                 android:textColor="#000000"
                 android:textSize="@dimen/text_size_large"
                 android:textStyle="bold" />
@@ -58,7 +58,7 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/custom_round_button"
                 android:gravity="center"
-                android:text="@string/plusday"
+                android:text="@string/trait_layout_date_plusday"
                 android:textColor="#000000"
                 android:textSize="@dimen/text_size_xxlarge"
                 android:textStyle="bold" />
