--- a/app/src/main/res/menu/menu_settings.xml
+++ b/app/src/main/res/menu/menu_settings.xml
@@ -2,13 +2,13 @@
 	<menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
         android:id="@+id/help"
-        android:title="@string/tutorial"
+        android:title="@string/tutorial_dialog_title"
         android:icon="@drawable/ic_tb_help"
         android:showAsAction="always" />
 
     <item
         android:id="@+id/database"
-        android:title="@string/dbformat"
+        android:title="@string/export_format_database"
         android:icon="@drawable/ic_tb_database"
         android:showAsAction="ifRoom" />"
 
