--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory
         android:key="pref_key_ui_settings"
-        android:title="@string/preferences_interface">
+        android:title="@string/preferences_appearance_title">
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:icon="@drawable/ic_tb_help"
+            android:key="Tips"
+            android:summary="@string/preferences_appearance_tutorial_description"
+            android:title="@string/tutorial_dialog_title" />
 
         <Preference
             android:icon="@drawable/ic_nav_drawer_translate"
             android:key="language"
-            android:summary="@string/language_desc"
-            android:title="@string/preferences_interface_language">
+            android:summary="@string/preferences_appearance_language_description"
+            android:title="@string/preferences_appearance_language">
 
             <intent
                 android:action="android.intent.action.MAIN"
@@ -22,15 +29,15 @@
             android:key="INFOBAR_NUMBER"
             android:maxLength="2"
             android:numeric="integer"
-            android:summary="@string/infobar_number_desc"
-            android:title="@string/infobar_number" />
+            android:summary="@string/preferences_appearance_infobar_number_description"
+            android:title="@string/preferences_appearance_infobar_number" />
 
         <CheckBoxPreference
             android:defaultValue="false"
             android:icon="@drawable/ic_adv_quick_goto"
             android:key="QuickGoTo"
-            android:summary="@string/quickgoto_desc"
-            android:title="@string/quickgoto" />
+            android:summary="@string/preferences_appearance_quickgoto_description"
+            android:title="@string/preferences_appearance_quickgoto" />
 
     </PreferenceCategory>
 
@@ -42,21 +49,21 @@
             android:defaultValue="false"
             android:icon="@drawable/ic_adv_primary_order_sound"
             android:key="RangeSound"
-            android:summary="@string/rangechime_desc"
-            android:title="@string/rangechime" />
+            android:summary="@string/preferences_sound_primary_order_sound_description"
+            android:title="@string/preferences_sound_primary_order_sound" />
 
     </PreferenceCategory>
 
     <PreferenceCategory
         android:key="pref_key_ux_settings"
-        android:title="@string/preferences_behavior">
+        android:title="@string/preferences_behavior_title">
 
         <CheckBoxPreference
             android:defaultValue="false"
             android:icon="@drawable/ic_remap_volume_buttons"
             android:key="VOLUME_NAVIGATION"
-            android:summary="@string/navigate_volume_buttons_desc"
-            android:title="@string/navigate_volume_buttons" />
+            android:summary="@string/preferences_behavior_volume_buttons_navigate_description"
+            android:title="@string/preferences_behavior_volume_buttons_navigate" />
 
         <ListPreference
             android:defaultValue="0"
@@ -65,91 +72,83 @@
             android:icon="@drawable/ic_return_character"
             android:key="RETURN_CHARACTER"
             android:summary="%s"
-            android:title="@string/return_character" />
+            android:title="@string/preferences_behavior_return_character" />
         <!-- todo add measurement as an option-->
     </PreferenceCategory>
 
-
     <PreferenceCategory
         android:key="pref_key_general_settings"
-        android:title="@string/preferences_general">
-
-        <CheckBoxPreference
-            android:defaultValue="false"
-            android:icon="@drawable/ic_tb_help"
-            android:key="Tips"
-            android:summary="@string/tips_desc"
-            android:title="@string/tutorial_dialog_title" />
+        android:title="@string/preferences_general_title">
 
         <CheckBoxPreference
             android:defaultValue="false"
             android:icon="@drawable/ic_adv_cycle_traits_advances"
             android:key="CycleTraits"
-            android:summary="@string/cycle_desc"
-            android:title="@string/cycle" />
-
-        <CheckBoxPreference
-            android:defaultValue="false"
-            android:icon="@drawable/ic_adv_use_day"
-            android:key="UseDay"
-            android:summary="@string/useday_desc"
-            android:title="@string/useday" />
-
-        <CheckBoxPreference
-            android:defaultValue="false"
-            android:icon="@drawable/ic_adv_hide_entries"
-            android:key="IgnoreExisting"
-            android:summary="@string/ignoreentries_desc"
-            android:title="@string/ignoreentries" />
-
-        <CheckBoxPreference
-            android:defaultValue="false"
-            android:icon="@drawable/ic_adv_disable_file_sharing"
-            android:key="DisableShare"
-            android:summary="@string/disableshare_desc"
-            android:title="@string/disableshare" />
-
-        <CheckBoxPreference
-            android:defaultValue="false"
-            android:icon="@drawable/ic_action_ic_adv_disable_left"
-            android:key="DisableEntryNavLeft"
-            android:summary="@string/disableentrynavleft_desc"
-            android:title="@string/disableentrynavleft" />
-
-        <CheckBoxPreference
-            android:defaultValue="false"
-            android:icon="@drawable/ic_action_ic_adv_disable_right"
-            android:key="DisableEntryNavRight"
-            android:summary="@string/disableentrynavright_desc"
-            android:title="@string/disableentrynavright" />
-
-        <CheckBoxPreference
-            android:defaultValue="false"
-            android:icon="@drawable/ic_tb_barcode_scan"
-            android:key="BarcodeScan"
-            android:summary="@string/barcodescan_desc"
-            android:title="@string/barcodescan" />
+            android:summary="@string/preferences_behavior_cycle_traits_description"
+            android:title="@string/preferences_behavior_cycle_traits" />
 
         <CheckBoxPreference
             android:defaultValue="false"
             android:icon="@drawable/ic_tb_forward"
             android:key="NextEmptyPlot"
-            android:summary="@string/nextmissingenable_desc"
-            android:title="@string/nextmissingenable" />
+            android:summary="@string/preferences_general_feature_next_missing_description"
+            android:title="@string/preferences_general_feature_next_missing" />
+
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:icon="@drawable/ic_tb_barcode_scan"
+            android:key="BarcodeScan"
+            android:summary="@string/preferences_general_barcode_camera_description"
+            android:title="@string/preferences_general_barcode_camera" />
 
         <CheckBoxPreference
             android:defaultValue="false"
             android:icon="@drawable/ic_tb_datagrid"
             android:key="DataGrid"
-            android:summary="@string/datagrid_desc"
-            android:title="@string/datagrid" />
+            android:summary="@string/preferences_general_feature_datagrid_description"
+            android:title="@string/preferences_general_feature_datagrid" />
+
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:icon="@drawable/ic_action_ic_adv_disable_left"
+            android:key="DisableEntryNavLeft"
+            android:summary="@string/preferences_general_entry_left_disable_description"
+            android:title="@string/preferences_general_entry_left_disable" />
+
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:icon="@drawable/ic_action_ic_adv_disable_right"
+            android:key="DisableEntryNavRight"
+            android:summary="@string/preferences_general_entry_right_disable_description"
+            android:title="@string/preferences_general_entry_right_disable" />
+
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:icon="@drawable/ic_adv_disable_file_sharing"
+            android:key="DisableShare"
+            android:summary="@string/preferences_general_share_disable_description"
+            android:title="@string/preferences_general_share_disable" />
 
         <CheckBoxPreference
             android:defaultValue="false"
             android:icon="@drawable/ic_adv_unique"
             android:key="JumpToPlot"
-            android:summary="@string/jumptoplotid_desc"
-            android:title="@string/jumptoplotid" />
+            android:summary="@string/preferences_general_feature_barcode_text_description"
+            android:title="@string/preferences_general_feature_barcode_text" />
+
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:icon="@drawable/ic_adv_use_day"
+            android:key="UseDay"
+            android:summary="@string/preferences_general_use_day_number_description"
+            android:title="@string/preferences_general_use_day_number" />
+
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:icon="@drawable/ic_adv_hide_entries"
+            android:key="IgnoreExisting"
+            android:summary="@string/preferences_general_skip_entries_with_data_description"
+            android:title="@string/preferences_general_skip_entries_with_data" />
     </PreferenceCategory>
 
     <PreferenceCategory
