Move @bellerbrock printer code into new trait

--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -377,6 +377,16 @@
                                 layout="@layout/trait_angle"
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content" />
+
+                            <include
+                                layout="@layout/trait_barcode"
+                                android:layout_width="fill_parent"
+                                android:layout_height="wrap_content" />
+
+                            <include
+                                layout="@layout/trait_labelprint"
+                                android:layout_width="fill_parent"
+                                android:layout_height="wrap_content" />
                         </LinearLayout>
 
                     </ScrollView>
