--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -153,11 +153,10 @@
 
     <PreferenceCategory
         android:key="pref_key_brapi_settings"
-        android:title="@string/preferences_brapi"
-        >
+        android:title="@string/preferences_brapi">
 
-        <PreferenceScreen android:title="BrAPI Configuration">
-            <PreferenceCategory>
+        <PreferenceScreen android:title="@string/brapi_title">
+            <PreferenceCategory android:title="@string/brapi_title">
                 <EditTextPreference
                     android:icon="@drawable/ic_adv_infobar_count"
                     android:key="BRAPI_BASE_URL"
@@ -166,7 +165,17 @@
                     android:dialogTitle="@string/brapi_base_url"
                     android:dialogMessage="@string/brapi_base_url_desc"
                     android:defaultValue="@string/brapi_base_url_default"
-                    android:positiveButtonText="Save and Authenticate"
+                    android:positiveButtonText="@string/brapi_save_authorize"
+                    />
+                <Preference
+                    android:icon="@drawable/ic_launch"
+                    android:key="authorizeBrapi"
+                    android:title="@string/brapi_authorize"
+                    />
+                <Preference
+                    android:icon="@drawable/ic_exit_to_app"
+                    android:key="revokeBrapiAuth"
+                    android:title="@string/brapi_revoke_auth"
                     />
             </PreferenceCategory>
         </PreferenceScreen>
