--- a/app/src/main/res/layout/activity_traits_brapi.xml
+++ b/app/src/main/res/layout/activity_traits_brapi.xml
@@ -19,19 +19,26 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="0"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/loadTraits"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Load Traits" />
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:onClick="buttonClicked"
+            android:text="@string/brapi_load_traits_button"
+            android:textColor="@color/s_text"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/brapiBaseUrl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:textSize="15sp"/>
 
     </LinearLayout>
 
@@ -50,7 +57,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0"
-        android:gravity="center">
+        android:gravity="center"
+        android:visibility="gone">
 
         <ProgressBar
             android:layout_width="wrap_content"
