refactoring and basic testing complete

--- a/app/src/main/res/layout-sw600dp/trait_counter.xml
+++ b/app/src/main/res/layout-sw600dp/trait_counter.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.fieldbook.tracker.traitLayouts.CounterTraitLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/counterLayout"
     android:layout_width="match_parent"
@@ -70,4 +70,4 @@
 
         </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</com.fieldbook.tracker.traitLayouts.CounterTraitLayout>
