--- a/app/src/main/res/layout/trait_boolean.xml
+++ b/app/src/main/res/layout/trait_boolean.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.fieldbook.tracker.traitLayouts.BooleanTraitLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:visibility="gone"
@@ -13,4 +13,4 @@
         android:scaleType="fitXY"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/trait_boolean_true" />
-</LinearLayout>
+</com.fieldbook.tracker.traitLayouts.BooleanTraitLayout>
