--- a/app/src/main/res/layout-sw600dp/trait_audio.xml
+++ b/app/src/main/res/layout-sw600dp/trait_audio.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.fieldbook.tracker.traitLayouts.AudioTraitLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/audioLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,4 +24,4 @@
             android:scaleType="fitXY"
             android:src="@drawable/main_ic_delete_forever" />
     </LinearLayout>
-</LinearLayout>
+</com.fieldbook.tracker.traitLayouts.AudioTraitLayout>
