--- a/app/src/main/res/layout-sw600dp/trait_categorical.xml
+++ b/app/src/main/res/layout-sw600dp/trait_categorical.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.fieldbook.tracker.traitLayouts.CategoricalTraitLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/categoricalLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -161,4 +161,4 @@
             android:textStyle="bold" />
 
     </GridLayout>
-</LinearLayout>
+</com.fieldbook.tracker.traitLayouts.CategoricalTraitLayout>
