--- a/app/src/main/res/layout-sw600dp/trait_diseaserating.xml
+++ b/app/src/main/res/layout-sw600dp/trait_diseaserating.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.fieldbook.tracker.traitLayouts.DiseaseRatingTraitLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/diseaseLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -470,4 +470,4 @@
 
         </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</com.fieldbook.tracker.traitLayouts.DiseaseRatingTraitLayout>
