--- a/app/src/main/res/layout-sw600dp/trait_percent.xml
+++ b/app/src/main/res/layout-sw600dp/trait_percent.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.fieldbook.tracker.traitLayouts.PercentTraitLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/percentLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,4 +20,4 @@
         android:progressDrawable="@drawable/custom_seek_bar"
         android:thumb="@drawable/custom_seek_bar_thumb"
         android:thumbOffset="0dp" />
-</LinearLayout>
+</com.fieldbook.tracker.traitLayouts.PercentTraitLayout>
