--- a/app/src/main/res/layout/trait_angle.xml
+++ b/app/src/main/res/layout/trait_angle.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.fieldbook.tracker.traitLayouts.AngleTraitLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/angleLayout"
     android:layout_width="match_parent"
@@ -33,4 +33,4 @@
         android:layout_gravity="center"
         android:background="#000000" />
 
-</LinearLayout>
+</com.fieldbook.tracker.traitLayouts.AngleTraitLayout>
