--- a/app/src/main/res/layout/trait_audio.xml
+++ b/app/src/main/res/layout/trait_audio.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.fieldbook.tracker.traitLayouts.AudioTraitLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/audioLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,7 +10,18 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:orientation="horizontal">
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/audioRecordingText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="Tap To Start"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_xxlarge"
+            android:textStyle="bold" />
 
         <ImageButton
             android:id="@+id/record"
@@ -24,4 +35,4 @@
             android:scaleType="fitXY"
             android:src="@drawable/trait_audio" />
     </LinearLayout>
-</LinearLayout>
+</com.fieldbook.tracker.traitLayouts.AudioTraitLayout>
