--- a/app/src/main/res/layout/trait_counter.xml
+++ b/app/src/main/res/layout/trait_counter.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.fieldbook.tracker.traitLayouts.CounterTraitLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/counterLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:visibility="visible">
+    android:visibility="gone">
 
     <LinearLayout
         android:id="@+id/counter"
@@ -68,4 +68,4 @@
 
         </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</com.fieldbook.tracker.traitLayouts.CounterTraitLayout>
