--- a/app/src/main/res/layout/trait_multicat.xml
+++ b/app/src/main/res/layout/trait_multicat.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.fieldbook.tracker.traitLayouts.MultiCatTraitLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/multicatLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,4 +12,4 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:numColumns="3" />
-</LinearLayout>
+</com.fieldbook.tracker.traitLayouts.MultiCatTraitLayout>
