--- a/app/src/main/res/layout/trait_numeric.xml
+++ b/app/src/main/res/layout/trait_numeric.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.fieldbook.tracker.traitLayouts.NumericTraitLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/numericLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -209,4 +209,4 @@
             android:textStyle="bold" />
 
     </GridLayout>
-</LinearLayout>
+</com.fieldbook.tracker.traitLayouts.NumericTraitLayout>
