--- a/app/src/main/res/layout/trait_photo.xml
+++ b/app/src/main/res/layout/trait_photo.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.fieldbook.tracker.traitLayouts.PhotoTraitLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/photoLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -41,4 +41,4 @@
             android:src="@drawable/ic_trait_camera" />
 
     </LinearLayout>
-</LinearLayout>
+</com.fieldbook.tracker.traitLayouts.PhotoTraitLayout>
