--- a/app/src/main/res/layout/trait_text.xml
+++ b/app/src/main/res/layout/trait_text.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.fieldbook.tracker.traitLayouts.TextTraitLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/textLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:visibility="gone"
     android:orientation="vertical">
 
-</LinearLayout>
+</com.fieldbook.tracker.traitLayouts.TextTraitLayout>
