--- a/app/src/main/res/layout/activity_traits_brapi.xml
+++ b/app/src/main/res/layout/activity_traits_brapi.xml
@@ -69,20 +69,66 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="bottom|center"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:gravity="bottom|center">
 
-        <Button
-            android:id="@+id/save"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:text="@string/brapi_save_trait"
-            android:textColor="@color/s_text"
-            android:textSize="20sp"
-            android:onClick="buttonClicked"/>
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/prev"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:text="@string/prev"
+                android:textColor="@color/s_text"
+                android:textSize="20sp"
+                android:layout_alignParentLeft="true"
+                android:onClick="buttonClicked"/>
+            <TextView
+                android:id="@+id/page_indicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:text = "@string/page_one_of_one"
+                android:layout_centerInParent="true"/>
+            <Button
+                android:id="@+id/next"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:text="@string/next"
+                android:textColor="@color/s_text"
+                android:textSize="20sp"
+                android:onClick="buttonClicked"
+                android:layout_alignParentRight="true"/>
+        </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="bottom|center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/save"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:text="@string/brapi_save_trait"
+                android:textColor="@color/s_text"
+                android:textSize="20sp"
+                android:onClick="buttonClicked"/>
+        </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
