Add support for android api 16. Make auth page open with default browser

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -156,7 +156,9 @@
         android:title="@string/preferences_brapi">
 
         <PreferenceScreen android:title="@string/brapi_title">
-            <PreferenceCategory android:title="@string/brapi_title">
+            <PreferenceCategory
+                android:key="test_category"
+                android:title="@string/brapi_title">
                 <EditTextPreference
                     android:icon="@drawable/ic_adv_infobar_count"
                     android:key="BRAPI_BASE_URL"
