--- a/app/src/main/res/xml/preferences_database.xml
+++ b/app/src/main/res/xml/preferences_database.xml
@@ -3,19 +3,19 @@
 
     <Preference
         android:icon="@drawable/ic_pref_database_import"
-        android:key="import_database"
+        android:key="pref_database_import"
         android:summary=""
         android:title="@string/database_import" />
 
     <Preference
         android:icon="@drawable/ic_pref_database_export"
-        android:key="export_database"
+        android:key="pref_database_export"
         android:summary=""
         android:title="@string/database_export" />
 
     <Preference
         android:icon="@drawable/ic_pref_database_delete"
-        android:key="delete_database"
+        android:key="pref_database_delete"
         android:summary=""
         android:title="@string/database_reset" />
 
